--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@ layout: default
 title: paradoxxx zero
 ---
 
-<div id="home">
-  <h1>Blog</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+
+<section id="home">
+  {% for post in site.posts %}
+  <h2><span class="date">{{ post.date | date_to_string }}</span> <small><a href="{{ post.url }}">{{ post.title }}</a></small></h2>
+    <blockquote class="pull-right">
+    {{ post.excerpt }}
+    <small><a href="{{ post.url }}">More…</a></small>
+    </blockquote>
+  {% endfor %}
 </div>
