--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       body,
       #root {
         margin: 0;
-        overflow: hidden;
+        scroll-behavior: smooth;
         width: 100%;
         height: 100%;
       }
