--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
         width: 100%;
         height: 100%;
       }
+      html {
+        overflow-x: hidden;
+      }
     </style>
   </head>
   <body>
