--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta name="theme-color" content="#5689b8" />
     <title>Florian Mounier</title>
     <style>
       html,
