Static build and most of remaining screen shots

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#5689b8" />
     <title>Florian Mounier</title>
     <style>
+      @import url('https://fonts.googleapis.com/css?family=Asap&display=swap');
       html,
       body,
       #root {
@@ -19,6 +20,9 @@
       }
       html {
         overflow-x: hidden;
+      }
+      body {
+        font-family: 'Asap', sans-serif;
       }
     </style>
   </head>
