--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,18 @@
         font-family: 'Asap', sans-serif;
       }
     </style>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-5078036-22"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+      gtag('config', 'UA-5078036-22')
+    </script>
   </head>
   <body>
     <div id="root">{{prerender}}</div>
