Finally static ssr is working with snowpack

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" type="text/css" href="/index.css" />
     <meta name="theme-color" content="#5689b8" />
     <title>Florian Mounier</title>
+    <!-- STYLE -->
   </head>
   <body>
+    <div id="root"><!-- APP --></div>
     <script type="module" src="/dist/index.js"></script>
     <script
       async
@@ -24,6 +26,5 @@
       gtag('js', new Date())
       gtag('config', 'UA-154485454-1')
     </script>
-    <div id="root">{{prerender}}</div>
   </body>
 </html>
