--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         margin: 0;
         scroll-behavior: smooth;
         width: 100%;
-        height: 100%;
+        height: 100vh;
+        height: 100lvh;
       }
       html {
         overflow-x: hidden;
@@ -39,7 +40,8 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
+        height: 100lvh;
       }
     </style>
     <!--app-jss-->
