--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <script type="module" src="/src/index.jsx"></script>
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-154485454-1"
+      src="https://www.googletagmanager.com/gtag/js?id=G-X6BHBV7LRB"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || []
@@ -60,7 +60,8 @@
         dataLayer.push(arguments)
       }
       gtag('js', new Date())
-      gtag('config', 'UA-154485454-1')
+
+      gtag('config', 'G-X6BHBV7LRB')
     </script>
   </body>
 </html>
